re PR target/25662 (Unrecognizable insn with -O on PPC)

2005-01-07  Ian Lance Taylor  <ian@airs.com>
            David Edelsohn  <edelsohn@gnu.org>

        PR rtl-optimization/25662
        * optabs.c (simplify_expand_binop): Use simplify_binary_operation
        for constant operands instead of simplify_gen_binary.
        * simplify-rtx.c (simplify_gen_binary): Swap commutative operands
        after trying simplify_binary_operation

Co-Authored-By: David Edelsohn <edelsohn@gnu.org>

From-SVN: r109456